--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -15,23 +15,22 @@
 @import url("../DevTools/DevTools.css");
 
 @font-face {
-  font-family: vazir;
+  font-family: Vazir;
   src: url(../../Fonts/Vazir.woff);
 }
 @font-face {
-  font-family: monte;
-  src: url(../../Fonts/Montserrat-Medium.ttf);
+  font-family: Inter;
+  src: url(../../Fonts/Inter.ttf);
 }
-@font-face {
-  font-family: dastnevis;
-  src: url(../../Fonts/danstevis.otf);
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Vazir, Inter;
 }
 #background {
-  position: absolute;
-  z-index: 100;
   width: 100%;
   height: 100%;
-  opacity: 0.1;
+  opacity: 1;
 }
 .disable-selection {
   -webkit-user-select: none; /* Safari */
@@ -65,7 +64,6 @@
 }
 .preloader-text {
   color: #dad6d6;
-  font-family: vazir;
   font-size: 1.8em;
 }
 button {
@@ -87,11 +85,6 @@ input[type="checkbox"] {
 .disabled {
   opacity: 0.55;
 }
-* {
-  margin: 0;
-  padding: 0;
-  font-family: vazir;
-}
 body {
   display: flex;
   flex-direction: column;
@@ -100,7 +93,6 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
-  font-family: vazir;
   direction: rtl;
   overflow: hidden;
 }
