--- a/Styles/DevTools/DevTools.css
+++ b/Styles/DevTools/DevTools.css
@@ -17,6 +17,18 @@
   gap: 10px;
   margin: 30px 0;
 }
+/* Search Bar*/
+.theme-modal-search-bar {
+  order: 3;
+  min-width: 95%;
+  margin: 0 auto 10px auto;
+  padding: 8px;
+  background-color: #2e3843;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  color: #f72f2f;
+  font-size: 1rem;
+}
 /* theme bar Buttons */
 .theme-bar-btn,
 .new-theme-btn {
@@ -44,9 +56,8 @@
 /* Theme tweaker options section */
 .theme-tweaker-options {
   direction: ltr;
-  order: 3;
+  order: 4;
   overflow-y: scroll;
-  scrollbar-width: none;
   max-height: 500px;
   width: 100%;
   border-top: 2px solid rgba(218, 214, 214, 0.5);
@@ -100,7 +111,7 @@
   color: #c8f705;
 }
 .theme-tweaker-modal-btn-container {
-  order: 4;
+  order: 5;
   display: flex;
   padding: 20px;
   width: calc(100% - 40px);
