--- a/Styles/Main/style_ltr.css
+++ b/Styles/Main/style_ltr.css
@@ -25,6 +25,10 @@
 * {
   font-family: "Inter", "vazir";
 }
+input:focus {
+  border: 0;
+  outline: 0;
+}
 #background {
   width: 100%;
   height: 100%;
