--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -27,6 +27,10 @@
   padding: 0;
   font-family: Vazir, Inter;
 }
+input:focus {
+  border: 0;
+  outline: 0;
+}
 #background {
   width: 100%;
   height: 100%;
