--- a/Styles/TaskSection/task_section_ltr.css
+++ b/Styles/TaskSection/task_section_ltr.css
@@ -128,30 +128,19 @@
   text-align: left;
   border-radius: 5px;
 }
-/* Date Container */
-.date-container {
+/* Task Extra Info */
+.task-extra-info {
   width: fit-content;
   display: flex;
   flex-direction: row;
   position: absolute;
   top: -20px;
   left: 0px;
+  padding: 3px 5px;
+  font-size: 0.9em;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
   margin: 0;
-}
-/* Task Date */
-.task-date {
-  order: 2;
-  padding: 3px 5px;
-  font-size: 0.9em;
-  direction: ltr;
-}
-/* Task Time */
-.task-time {
-  order: 1;
-  padding: 3px 5px;
-  font-size: 0.9em;
   direction: ltr;
 }
 /* Badges for Failed and Completed Tasks */
@@ -193,10 +182,7 @@
 }
 /* Empty Box Container */
 .empty-box-container {
-  position: absolute;
-  top: 50%;
-  left: 60%;
-  transform: translate(-50%, -50%);
+  margin: auto;
   width: fit-content;
   height: fit-content;
   display: flex;
@@ -206,8 +192,8 @@
 }
 /* Empty Box Image */
 .empty-box-container img {
-  width: 200px;
-  height: 200px;
+  width: 10rem;
+  height: 10rem;
 }
 /* Empty Box Text */
 .empty-box-text {
