--- a/Styles/Modal/modal_rtl.css
+++ b/Styles/Modal/modal_rtl.css
@@ -128,7 +128,7 @@
 .red-btn {
   background-color: rgb(255, 69, 69);
 }
-.task-title-section,
+.input-container,
 .task-date-section,
 .note-title-section,
 .edit-date-section,
