--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -13,6 +13,7 @@
 @import url("../Notes/notes_rtl.css");
 @import url("../MessageBox/msg_box_rtl.css");
 @import url("../DevTools/DevTools.css");
+@import url("../AccountModal/account_modal_rtl.css");
 
 @font-face {
   font-family: Vazir;
