added many api functions , added select box to settings , added 3d particles

--- a/Styles/AccountModal/account_modal_rtl.css
+++ b/Styles/AccountModal/account_modal_rtl.css
@@ -1,4 +1,5 @@
 .account-form {
+  position: relative;
   width: calc(100% - 30px);
   padding: 15px;
   display: flex;
@@ -13,8 +14,12 @@
   width: calc(100% - 20px);
   font-size: 1rem;
   padding: 10px;
-  border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.account-input[type="password"] {
+  width: calc(100% - 40px);
+  padding-right: 30px;
 }
 .account-options {
   display: flex;
@@ -38,4 +43,52 @@
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   cursor: pointer;
+}
+.view-pwd-btn {
+  background-color: transparent;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 9px;
+  bottom: 9px;
+}
+.view-pwd-btn-icon {
+  width: 20px;
+  height: 20px;
+}
+.waiting-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(20px);
+  z-index: 100;
+}
+.loading-text {
+  font-size: 1.7rem;
+  margin: 10px 0;
+}
+/* HTML: <div class="loader"></div> */
+.loader {
+  --s: 25px;
+
+  --_d: calc(0.353 * var(--s));
+  width: calc(var(--s) + var(--_d));
+  aspect-ratio: 1;
+  clip-path: polygon(var(--_d) 0, 100% 0, 100% calc(100% - var(--_d)), calc(100% - var(--_d)) 100%, 0 100%, 0 var(--_d));
+  background: conic-gradient(from -90deg at var(--s) var(--_d), #fff 135deg, #666 0 270deg, #aaa 0);
+  animation: l1 1s infinite cubic-bezier(0.5, 300, 0.5, -300);
+}
+@keyframes l1 {
+  50%,
+  100% {
+    transform: translateY(0.1px);
+  }
 }
