--- a/Styles/Main/style_ltr.css
+++ b/Styles/Main/style_ltr.css
@@ -14,6 +14,7 @@
 @import url("../MessageBox/msg_box_ltr.css");
 @import url("../DevTools/DevTools.css");
 @import url("../AccountModal/account_modal_ltr.css");
+@import url("../SelectBox/select_box_ltr.css");
 
 @font-face {
   font-family: vazir;
@@ -26,11 +27,16 @@
 * {
   font-family: "Inter", "vazir";
 }
+#particles-js {
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
 input:focus {
   border: 0;
   outline: 0;
 }
-#background {
+.background-image {
   width: 100%;
   height: 100%;
   opacity: 1;
@@ -40,7 +46,7 @@ input:focus {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
-#overlay {
+.brightness-overlay {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -167,4 +173,27 @@ body {
     box-shadow: 0 0 0 13px #0b6e4f30;
     rotate: 0;
   }
+}
+/* Read note modal */
+.Dark .info-container-row {
+  border-bottom: 1px solid var(--white);
+  color: var(--white);
+}
+.Dark #select-category-select-box {
+  background-color: var(--white);
+  color: var(--black);
+}
+.Dark .pick-category-icon-button {
+  background-color: var(--grey);
+}
+.Dark .checkmark {
+  --clr: #008ffd;
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 1.2em;
+  width: 1.2em;
+  background-color: #ccc;
+  border-radius: 50%;
+  transition: 300ms;
 }
