--- a/Styles/Modal/modal_ltr.css
+++ b/Styles/Modal/modal_ltr.css
@@ -64,6 +64,7 @@
   margin: 5px 0;
 }
 .close-btn {
+  z-index: 1000;
   height: 35px;
   border-radius: 50%;
   background: none;
@@ -144,71 +145,6 @@
 .select-category-section {
   position: relative;
   padding-top: 3px 0 0 1px;
-}
-.select-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  background-color: #dad6d6;
-  cursor: pointer;
-  height: 50px;
-  width: 100%;
-  border: 0;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.select-box-text {
-  font-size: 1em;
-  text-align: center;
-}
-.options-container {
-  width: 100%;
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 50px;
-  background-color: #dad6d6;
-  overflow: hidden;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  margin-top: 1px;
-}
-.show-select-box {
-  display: flex;
-}
-.option {
-  width: calc(100% - 16px);
-  padding: 8px;
-  margin: 2px 0;
-  cursor: pointer !important;
-  font-size: 1em;
-  text-align: auto;
-}
-.option:hover {
-  background-color: #cac7c7;
-}
-.select-box-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  right: -1px;
-  height: 50px;
-  width: 50px;
-  cursor: pointer;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  background-color: #f05454;
-}
-.select-box-icon {
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-  transition: transform 0.3s;
-}
-.rotate-icon {
-  transform: rotate(180deg);
 }
 .modal-input:focus {
   outline: 0;
