--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -15,6 +15,7 @@
 @import url("../DevTools/DevTools.css");
 @import url("../AccountModal/account_modal_rtl.css");
 @import url("../SelectBox/select_box_rtl.css");
+@import url("../PreLoader/pre_loader.css");
 
 @font-face {
   font-family: Vazir;
@@ -39,6 +40,7 @@ input:focus {
   outline: 0;
 }
 .background-image {
+  background-size: cover;
   width: 100%;
   height: 100%;
   opacity: 1;
@@ -55,27 +57,6 @@ input:focus {
   z-index: 2000;
   background-color: #000;
   opacity: 0;
-}
-.preloader {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 1000;
-  background-color: #3a4166;
-  transition: 1s;
-}
-.preloader-gif {
-  width: 80px;
-  height: 80px;
-  margin-bottom: 20px;
-}
-.preloader-text {
-  color: #dad6d6;
-  font-size: 1.8em;
 }
 button {
   border: none;
